--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -17,8 +17,12 @@
 }
 
 #blueprint .device{
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    text-align: center;
+    background-color: white;
+    border: 1px solid #212529;
     position: absolute;
+    cursor: pointer;
 }
