--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -27,30 +27,21 @@
     cursor: pointer;
 }
 
-@keyframes glow {
-    0% { box-shadow: 0px 1px 25px 25px }
-    25% { box-shadow: 0px 1px 25px 25px }
-    50% { box-shadow: 0px 1px 25px 25px }
-    75% { box-shadow: 0px 1px 25px 25px }
-    100% { box-shadow: 0px 1px 25px 25px }
-}
-
 .shadow{
-    animation-name: glow;
-    animation-duration: 1s;
+    box-shadow: 0px 1px 25px 15px;
 }
 .shadow.shadow-secondary{
-    box-shadow: 0px 1px 25px 15px #6a757e;
+    color: #6a757e;
 }
   
 .shadow.shadow-success{
-    box-shadow: 0px 1px 25px 15px #28a745;
+    color: #28a745;
 }
 
 .shadow.shadow-warning{
-    box-shadow: 0px 1px 25px 15px #ffc107;
+    color: #ffc107;
 }
 
 .shadow.shadow-danger{
-    box-shadow: 0px 1px 25px 15px #ef143e;
+    color: #ef143e;
 }
