--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,13 +7,24 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+//$blue: #3490dc;
+//$indigo: #6574cd;
+//$purple: #9561e2;
+//$pink: #f66d9b;
+//$red: #e3342f;
+//$orange: #f6993f;
+//$yellow: #ffed4a;
+//$green: #38c172;
+//$teal: #4dc0b5;
+//$cyan: #6cb2eb;
+$dark-blue: #1C4E80;
+$light: #F1F1F1; 
+$dark: #202020; 
+$grey: #7E909A;
+$light-blue: #A5D8DD;
+$orange: #EA6A47; 
+$blue: #0091D5; 
+
+$primary: $dark-blue;
+$secondary: $grey;
+$info: $blue;
